connected the sign up/in endpoints and created routes for pages navigation

--- a/intel-chatbot-frontend/src/pages/ChatPage.css
+++ b/intel-chatbot-frontend/src/pages/ChatPage.css
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
     height: 100% !important;
     margin: 0 !important;
     background: #7F7FD5 !important;
@@ -62,4 +62,4 @@ body, html {
     background-color: #0056b3;
     border: none;
   }
-  
+   */
