finished structuring the chatpage, connected the chat routes

--- a/intel-chatbot-frontend/src/App.css
+++ b/intel-chatbot-frontend/src/App.css
@@ -1,18 +1,14 @@
-body {
-  font-family: 'Arial', sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  background: #f0f0f0;
-}
-
 .container {
   width: 800px;
   height: 500px;
-  position: relative;
+  position: fixed;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 50%;
+  margin-top: 4%;
+  transform: translateX(-50%);
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
