--- a/intel-chatbot-frontend/src/pages/ChatPage.css
+++ b/intel-chatbot-frontend/src/pages/ChatPage.css
@@ -131,7 +131,11 @@
 .messages-content {
   width: auto; 
   max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
 }
+
 .chat-input::placeholder {
   line-height: 20px; 
 }
@@ -142,4 +146,3 @@
   width: calc(70% - 40px);
  max-width: calc(100% - 40px);
 }
-
