--- a/intel-chatbot-frontend/src/pages/ChatPage.css
+++ b/intel-chatbot-frontend/src/pages/ChatPage.css
@@ -21,6 +21,8 @@
 .app-bar {
   transition: width 225ms cubic-bezier(0.4, 0.0, 0.2, 1);
   z-index: 1;
+  position: fixed;
+  top: 0;
   /* Ensure app bar is above drawer */
 }
 
@@ -38,7 +40,7 @@
 
 
 .chat-content {
-  flex-grow: 1;
+  flex: 1;
   overflow-y: auto;
   padding: 24px;
   display: flex;
@@ -49,7 +51,8 @@
   transition: margin 225ms cubic-bezier(0.4, 0.0, 0.2, 1);
   z-index: 0;
   width: 100%; 
-  height: calc(100vh - 100px);
+  height: calc(100vh - 60px);
+  margin-top: 60px;
 }
 
 .chat-content.open {
