--- a/intel-chatbot-frontend/src/pages/ChatPage.css
+++ b/intel-chatbot-frontend/src/pages/ChatPage.css
@@ -56,16 +56,16 @@
 }
 
 .dynamic-component-container {
-  width: 100%!important;
-  height: 100% !important;
+  width: 100% ;
+  height: 90% ;
   display: flex; 
   justify-content: center;
   align-items: center;
 }
 
 .dynamic-component-container > * {
-  width: 100% !important;
-  height: 100% !important; 
+  width: 100% ;
+  height: 100% ; 
 }
 
 
@@ -147,7 +147,7 @@
   line-height: 20px; 
 }
 .messages-content {
-  width: 100%; 
+  width: auto; 
   max-width: 500px;
   display: flex;
   flex-direction: column;
