--- a/intel-chatbot-frontend/src/pages/ChatPage.css
+++ b/intel-chatbot-frontend/src/pages/ChatPage.css
@@ -55,21 +55,6 @@
   margin-top: 60px;
 }
 
-.dynamic-component-container {
-  width: 100% ;
-  height: 90% ;
-  display: flex; 
-  justify-content: center;
-  align-items: center;
-}
-
-.dynamic-component-container > * {
-  width: 100% ;
-  height: 100% ; 
-}
-
-
-
 .chat-content.open {
   margin-left: 100px;
   /* Adjust margin when sidebar is open */
@@ -147,8 +132,8 @@
   line-height: 20px; 
 }
 .messages-content {
-  width: auto; 
-  max-width: 500px;
+  width: auto ; 
+  max-width: 90% ;
   display: flex;
   flex-direction: column;
   align-items: flex-start; 
