made some design adjustments

--- a/intel-chatbot-frontend/src/pages/UserCredentials.css
+++ b/intel-chatbot-frontend/src/pages/UserCredentials.css
@@ -32,7 +32,7 @@
 }
 
 .left-panel {
-    background: #2cc8ca;
+    background-color: #B5C18E;
     color: white;
 }
 
@@ -59,7 +59,7 @@ button {
 }
 
 button span {
-    color: #2cc8ca;
+    color: #DEAC80;
     text-decoration: underline;
 }
 
